# rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  streamlit_app.py
scripts/: cli_logging.py  export_knowledge.py  ingest.py
src/rag_api/: __init__.py  main.py
src/rag_api/core/: __init__.py  logging.py  settings.py
src/rag_api/dependencies/: services.py
src/rag_api/middleware/: __init__.py  request_id.py  request_logging.py
src/rag_api/routes/: chat.py  health.py  ingest.py
src/rag_api/schemas/: __init__.py  chat.py  common.py  ingest.py
src/rag_api/services/: __init__.py  job_service.py
src/rag_app/: __init__.py  config.py  data_loader.py  models.py  ollama_client.py  rag.py  retrievers.py  services.py  vector_store.py
tests/: test_api.py  test_data_loader.py  test_rag_service.py  test_router.py
