[project]
name = "oms-knowledge-rag-app"
version = "0.1.0"
description = "Streamlit RAG app over OMS knowledge-export data using ChromaDB and Ollama."
requires-python = ">=3.11,<3.13"
dependencies = [
  "chromadb>=0.5.23",
  "fastapi>=0.115.0",
  "numpy>=1.26.4",
  "ollama>=0.4.7",
  "python-dotenv>=1.0.1",
  "rank-bm25>=0.2.2",
  "streamlit>=1.41.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
multilingual = [
  "sentence-transformers>=3.3.1",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_app", "src/rag_api"]
